--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@reach/router": "^1.3.1",
+    "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
     "depcheck": "^0.9.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "typeface-inter": "^3.12.0"
   },
