setup apollo with simple list

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,7 @@
 [build]
   command = "npm run dist"
   publish = "dist"
+  functions = "functions"
 
 [context.production]
   [context.production.environment]
