--- a/package.json
+++ b/package.json
@@ -10,26 +10,20 @@
     "dist": "rm -rf build && webpack --mode ${NODE_ENV:-production} --output-path ${RELEASE_NAME:-./dist} --progress --config webpack.config.js"
   },
   "dependencies": {
-    "@reach/router": "^1.3.1",
-    "bootstrap": "^4.4.1",
-    "classnames": "^2.2.6",
-    "depcheck": "^0.9.2",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-dom": "^16.12.0",
-    "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11",
-    "typeface-inter": "^3.12.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@reach/router": "^1.3.1",
+    "apollo-server-lambda": "^2.10.1",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-root-import": "^6.4.1",
     "babel-preset-react-optimize": "^1.0.1",
+    "bootstrap": "^4.4.1",
+    "classnames": "^2.2.6",
     "css-hot-loader": "^1.4.4",
     "css-loader": "^3.4.2",
     "d3-webpack-loader": "^0.1.1",
+    "depcheck": "^0.9.2",
     "eslint": "^6.8.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-babel": "^5.3.0",
@@ -37,11 +31,17 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "fibers": "^4.0.2",
     "file-loader": "^5.0.2",
+    "graphql": "^14.6.0",
+    "graphql-iso-date": "^3.6.1",
     "image-webpack-loader": "^6.0.0",
     "node-sass": "^4.13.1",
     "npm": "^6.13.7",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier": "^1.19.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
+    "react-dom": "^16.12.0",
     "react-svg-loader": "^3.0.3",
     "sass": "^1.25.0",
     "sass-loader": "^8.0.2",
@@ -49,9 +49,14 @@
     "style-loader": "^1.1.3",
     "svg-react-loader": "^0.4.6",
     "terser-webpack-plugin": "^2.3.5",
+    "typeface-inter": "^3.12.0",
     "url-loader": "^3.0.0",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "apollo": "^2.23.0"
+  },
   "license": "MIT"
 }
