--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "graphql": "^14.6.0",
     "graphql-iso-date": "^3.6.1",
     "image-webpack-loader": "^6.0.0",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "npm": "^6.13.7",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
